# termpysui

./: .gitignore  CHANGELOG.md  Pipfile  README.rst  pyproject.toml
docs/: tpysui.rst
src/termpysui/: __init__.py  termpysui.py
src/termpysui/modals/: __init__.py  configfm.py  confirm.py  pyconfig_add.py  pyconfig_new.py  single_choice.py
src/termpysui/screens/: __init__.py  configs.py  dashboard.py  graphql.py
src/termpysui/widgets/: editable_table.py
src/tpysui/: tpysui.py
src/tpysui/modals/: __init__.py
src/tpysui/screens/: __init__.py  configs.py  sui_config.py
src/tpysui/widgets/: editable_table.py
